Many code cleanups ScenesComponent: - Reduced lines of placeholder scenes - fixed issue with placeholder scenes calculation - fixed '+' button flickering up on page load

--- a/electron-vite-project/src/components/ScenesComponent.css
+++ b/electron-vite-project/src/components/ScenesComponent.css
@@ -159,8 +159,6 @@
 }
 
 .dragHover:hover {
-  /* outline: 1px solid var(--primary);
-  outline-offset: -1px; */
   box-shadow: inset 0 0 0 1px var(--sceneOn);
 }
 
